styles/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    overflow-x: hidden;
}

/* generating common elements */

.raleway {
  font-family: "Raleway", sans-serif;
  font-optical-sizing: auto;
  font-weight: normal;
  font-style: normal;
}


.inter {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-weight: normal;
  font-style: normal;
}
.purple{
    color: #4E47FF;
}
.bold{
    font-weight: bold;
}
.primary-btn{
    padding: 12px 35px;
    border: none;
    border-radius: 10px;
    font-weight: bold;
    font-family: "Inter";
    background-color: #4E47FF;
    color: white;
}
.i{
    color: peachpuff;
    font-weight: 900;
    
}

/* webpage designing */

.head{
    width: 100vw;
}

.hero-section{ 
    padding-top: 50px;
    width: 100%;
    height: auto;
    background: url(../B12A01-landing-launchpad/Assets/Hero-bg.png);
}

nav{
    display: flex;
    justify-content: space-between;
    width: 80%;
    margin: 0 auto;
    padding-bottom: 50px;
}
.logo{
    font-size: 34px;
    font-weight: 900;
}
.hero-banner{
    max-width: 62%;
    text-align: center;
    margin: 150px auto;
    padding-bottom: 150px;
}
.banner-title{
    font-size: 65px;
}
.focus-btn{
    margin-top: 37px;
}
/* -----------main container------------ */

.main-container{
    width: 80%;
    margin: 0 auto;
}

.action-section{
    width: 100%;
    display: flex;
    justify-content: space-between;
    margin: 115px auto;
    align-items: center;
    column-gap: 220px;
}
.action-img{
    border-radius: 48px;
}
.action-block{
    text-align: left;
    
}
.action-title{
    font-size: 42px;
}
.action-text{
    font-size: 24px;
    color: #252432;
    opacity: 0.5;
    margin: 20px 0;
}

/* ---------productive users section------------ */

.users-section{
    background-color: rgba(78, 71, 255, 0.2);
    width: 100%;
    text-align: center;
    border-radius: 24px;
    margin: 115px auto;
}
.users-section-title{
    font-size: 38px;
    margin: 50px auto;
}
.stat-block{
    display: flex;
    gap: 165px;
    justify-content: center;
}
.stat-info{
    font-size: 80px;
}
.stat-block p{
    color: rgba(0, 0, 0, .5);
    font-family: "inter";
    margin-bottom: 50px;
}

